--- a/dicto-transcription-deploy/compose.loadbalancer.yaml
+++ b/dicto-transcription-deploy/compose.loadbalancer.yaml
@@ -33,7 +33,7 @@ services:
     build:
       args:
         BASE_IMAGE: nvidia/cuda:12.9.1-cudnn-runtime-ubuntu24.04
-    ports: []
+    ports: !reset []
     deploy:
       resources:
         reservations:
@@ -59,7 +59,7 @@ services:
     build:
       args:
         BASE_IMAGE: nvidia/cuda:12.9.1-cudnn-runtime-ubuntu24.04
-    ports: []
+    ports: !reset []
     deploy:
       resources:
         reservations:
@@ -85,7 +85,7 @@ services:
     build:
       args:
         BASE_IMAGE: nvidia/cuda:12.9.1-cudnn-runtime-ubuntu24.04
-    ports: []
+    ports: !reset []
     deploy:
       resources:
         reservations:
@@ -111,7 +111,7 @@ services:
     build:
       args:
         BASE_IMAGE: nvidia/cuda:12.9.1-cudnn-runtime-ubuntu24.04
-    ports: []
+    ports: !reset []
     deploy:
       resources:
         reservations:
@@ -137,7 +137,7 @@ services:
     build:
       args:
         BASE_IMAGE: nvidia/cuda:12.9.1-cudnn-runtime-ubuntu24.04
-    ports: []
+    ports: !reset []
     deploy:
       resources:
         reservations:
@@ -163,7 +163,7 @@ services:
     build:
       args:
         BASE_IMAGE: nvidia/cuda:12.9.1-cudnn-runtime-ubuntu24.04
-    ports: []
+    ports: !reset []
     deploy:
       resources:
         reservations:
@@ -189,7 +189,7 @@ services:
     build:
       args:
         BASE_IMAGE: nvidia/cuda:12.9.1-cudnn-runtime-ubuntu24.04
-    ports: []
+    ports: !reset []
     deploy:
       resources:
         reservations:
@@ -215,7 +215,7 @@ services:
     build:
       args:
         BASE_IMAGE: nvidia/cuda:12.9.1-cudnn-runtime-ubuntu24.04
-    ports: []
+    ports: !reset []
     deploy:
       resources:
         reservations:
