--- a/dicto-transcription-deploy/compose.loadbalancer.yaml
+++ b/dicto-transcription-deploy/compose.loadbalancer.yaml
@@ -5,7 +5,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./dicto-transcription-deploy/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - speaches-gpu-0
       - speaches-gpu-1
