rename back to whisper loadbalancer

--- a/dicto-transcription-deploy/compose.loadbalancer.yaml
+++ b/dicto-transcription-deploy/compose.loadbalancer.yaml
@@ -1,7 +1,7 @@
 services:
   speaches-loadbalancer:
     image: nginx:alpine
-    container_name: speaches-loadbalancer
+    container_name: whisper-loadbalancer
     ports:
       - "8000:8000"
     volumes:
